--- a/fpga_calculator.qsf
+++ b/fpga_calculator.qsf
@@ -175,4 +175,8 @@ set_location_assignment PIN_N19 -to d[5][5]
 set_location_assignment PIN_N20 -to d[5][6]
 set_location_assignment PIN_B8 -to rst
 set_location_assignment PIN_A7 -to just_button
+set_global_assignment -name VHDL_FILE Multiplexer4To1.vhd
+set_global_assignment -name VHDL_FILE DigitMultiplexer.vhd
+set_global_assignment -name VHDL_FILE DigitsMultiplexer.vhd
+set_global_assignment -name VHDL_FILE BcdMultiplexer4To1.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
