--- a/fpga_calculator.qsf
+++ b/fpga_calculator.qsf
@@ -168,7 +168,6 @@ set_location_assignment PIN_N18 -to o[5][3]
 set_location_assignment PIN_M20 -to o[5][4]
 set_location_assignment PIN_N19 -to o[5][5]
 set_location_assignment PIN_N20 -to o[5][6]
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name VHDL_FILE BinaryTo7SegmentDigits.vhd
 set_global_assignment -name VHDL_FILE SelectOper.vhd
 set_global_assignment -name VHDL_FILE Calculator.vhd
@@ -182,3 +181,5 @@ set_global_assignment -name VHDL_FILE DigitMultiplexer.vhd
 set_global_assignment -name VHDL_FILE DigitsMultiplexer.vhd
 set_global_assignment -name VHDL_FILE BcdMultiplexer4To1.vhd
 set_global_assignment -name VHDL_FILE OperatorTo7SegmentDigits.vhd
+set_global_assignment -name VHDL_FILE SevenSegmentMultiplexer4To1.vhd
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
