--- a/fpga_calculator.qsf
+++ b/fpga_calculator.qsf
@@ -168,6 +168,19 @@ set_location_assignment PIN_N18 -to o[5][3]
 set_location_assignment PIN_M20 -to o[5][4]
 set_location_assignment PIN_N19 -to o[5][5]
 set_location_assignment PIN_N20 -to o[5][6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to done
+set_location_assignment PIN_A8 -to done
+set_global_assignment -name VHDL_FILE BcdTo7Segment3D1S.vhd
 set_global_assignment -name VHDL_FILE SignDetecter.vhd
 set_global_assignment -name VHDL_FILE BcdTo7SegmentDigits.vhd
 set_global_assignment -name VHDL_FILE SelectOper.vhd
@@ -184,16 +197,6 @@ set_global_assignment -name VHDL_FILE FullAdder.vhd
 set_global_assignment -name VHDL_FILE FullAdderGenerator.vhd
 set_global_assignment -name VHDL_FILE AdderSubtractor.vhd
 set_global_assignment -name VHDL_FILE BcdTo7Segment.vhd
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[8]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[9]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to done
-set_location_assignment PIN_A8 -to done
+set_global_assignment -name VHDL_FILE Multiplicator.vhd
+set_global_assignment -name VHDL_FILE Complementer.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
