--- a/fpga_calculator.qsf
+++ b/fpga_calculator.qsf
@@ -66,54 +66,48 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to b[3]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to b[2]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to b[1]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to b[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[0][0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[0][1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[0][2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[0][3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[0][4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[0][5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[0][6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[1][0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[1][1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[1][2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[1][3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[1][4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[1][5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[1][6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[2][0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[2][1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[2][2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[2][3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[2][4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[2][5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[2][6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[3][0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[3][1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[3][2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[3][3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[3][4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[3][5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[3][6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[4][0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[4][1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[4][2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[4][3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[4][4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[4][5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[4][6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[5][0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[5][1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[5][2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[5][3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[5][4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[5][5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o[5][6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o0[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o0[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o0[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o0[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o0[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o0[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o0[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o1[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o1[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o1[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o1[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o1[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o1[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o1[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o2[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o2[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o2[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o2[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o2[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o2[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o2[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o3[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o3[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o3[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o3[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o3[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o3[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o3[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o4[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o4[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o4[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o4[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o4[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o4[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o4[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o5[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o5[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o5[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o5[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o5[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o5[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o5[6]
 set_instance_assignment -name IO_STANDARD "3.3 V SCHMITT TRIGGER" -to trig
 set_location_assignment PIN_A7 -to trig
 set_location_assignment PIN_B12 -to a[0]
@@ -126,58 +120,48 @@ set_location_assignment PIN_C11 -to b[1]
 set_location_assignment PIN_D12 -to b[2]
 set_location_assignment PIN_C12 -to b[3]
 set_location_assignment PIN_A12 -to b[4]
-set_location_assignment PIN_C14 -to o[0][0]
-set_location_assignment PIN_E15 -to o[0][1]
-set_location_assignment PIN_C15 -to o[0][2]
-set_location_assignment PIN_C16 -to o[0][3]
-set_location_assignment PIN_E16 -to o[0][4]
-set_location_assignment PIN_D17 -to o[0][5]
-set_location_assignment PIN_C17 -to o[0][6]
-set_location_assignment PIN_C18 -to o[1][0]
-set_location_assignment PIN_D18 -to o[1][1]
-set_location_assignment PIN_E18 -to o[1][2]
-set_location_assignment PIN_B16 -to o[1][3]
-set_location_assignment PIN_A17 -to o[1][4]
-set_location_assignment PIN_A18 -to o[1][5]
-set_location_assignment PIN_B17 -to o[1][6]
-set_location_assignment PIN_B20 -to o[2][0]
-set_location_assignment PIN_A20 -to o[2][1]
-set_location_assignment PIN_B19 -to o[2][2]
-set_location_assignment PIN_A21 -to o[2][3]
-set_location_assignment PIN_B21 -to o[2][4]
-set_location_assignment PIN_C22 -to o[2][5]
-set_location_assignment PIN_B22 -to o[2][6]
-set_location_assignment PIN_F21 -to o[3][0]
-set_location_assignment PIN_E22 -to o[3][1]
-set_location_assignment PIN_E21 -to o[3][2]
-set_location_assignment PIN_C19 -to o[3][3]
-set_location_assignment PIN_C20 -to o[3][4]
-set_location_assignment PIN_D19 -to o[3][5]
-set_location_assignment PIN_E17 -to o[3][6]
-set_location_assignment PIN_F18 -to o[4][0]
-set_location_assignment PIN_E20 -to o[4][1]
-set_location_assignment PIN_E19 -to o[4][2]
-set_location_assignment PIN_J18 -to o[4][3]
-set_location_assignment PIN_H19 -to o[4][4]
-set_location_assignment PIN_F19 -to o[4][5]
-set_location_assignment PIN_F20 -to o[4][6]
-set_location_assignment PIN_J20 -to o[5][0]
-set_location_assignment PIN_K20 -to o[5][1]
-set_location_assignment PIN_L18 -to o[5][2]
-set_location_assignment PIN_N18 -to o[5][3]
-set_location_assignment PIN_M20 -to o[5][4]
-set_location_assignment PIN_N19 -to o[5][5]
-set_location_assignment PIN_N20 -to o[5][6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[8]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to debug[9]
+set_location_assignment PIN_C14 -to o0[0]
+set_location_assignment PIN_E15 -to o0[1]
+set_location_assignment PIN_C15 -to o0[2]
+set_location_assignment PIN_C16 -to o0[3]
+set_location_assignment PIN_E16 -to o0[4]
+set_location_assignment PIN_D17 -to o0[5]
+set_location_assignment PIN_C17 -to o0[6]
+set_location_assignment PIN_C18 -to o1[0]
+set_location_assignment PIN_D18 -to o1[1]
+set_location_assignment PIN_E18 -to o1[2]
+set_location_assignment PIN_B16 -to o1[3]
+set_location_assignment PIN_A17 -to o1[4]
+set_location_assignment PIN_A18 -to o1[5]
+set_location_assignment PIN_B17 -to o1[6]
+set_location_assignment PIN_B20 -to o2[0]
+set_location_assignment PIN_A20 -to o2[1]
+set_location_assignment PIN_B19 -to o2[2]
+set_location_assignment PIN_A21 -to o2[3]
+set_location_assignment PIN_B21 -to o2[4]
+set_location_assignment PIN_C22 -to o2[5]
+set_location_assignment PIN_B22 -to o2[6]
+set_location_assignment PIN_F21 -to o3[0]
+set_location_assignment PIN_E22 -to o3[1]
+set_location_assignment PIN_E21 -to o3[2]
+set_location_assignment PIN_C19 -to o3[3]
+set_location_assignment PIN_C20 -to o3[4]
+set_location_assignment PIN_D19 -to o3[5]
+set_location_assignment PIN_E17 -to o3[6]
+set_location_assignment PIN_F18 -to o4[0]
+set_location_assignment PIN_E20 -to o4[1]
+set_location_assignment PIN_E19 -to o4[2]
+set_location_assignment PIN_J18 -to o4[3]
+set_location_assignment PIN_H19 -to o4[4]
+set_location_assignment PIN_F19 -to o4[5]
+set_location_assignment PIN_F20 -to o4[6]
+set_location_assignment PIN_J20 -to o5[0]
+set_location_assignment PIN_K20 -to o5[1]
+set_location_assignment PIN_L18 -to o5[2]
+set_location_assignment PIN_N18 -to o5[3]
+set_location_assignment PIN_M20 -to o5[4]
+set_location_assignment PIN_N19 -to o5[5]
+set_location_assignment PIN_N20 -to o5[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to done
 set_location_assignment PIN_A8 -to done
 set_global_assignment -name VHDL_FILE BcdTo7Segment3D1S.vhd
@@ -187,7 +171,6 @@ set_global_assignment -name VHDL_FILE SelectOper.vhd
 set_global_assignment -name VHDL_FILE Calculator.vhd
 set_global_assignment -name VHDL_FILE MainState.vhd
 set_global_assignment -name VHDL_FILE SelectNum.vhd
-set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
 set_global_assignment -name VHDL_FILE YAY.vhd
 set_global_assignment -name VHDL_FILE Multiplexer4To1.vhd
 set_global_assignment -name VHDL_FILE BcdMultiplexer4To1.vhd
@@ -199,4 +182,5 @@ set_global_assignment -name VHDL_FILE AdderSubtractor.vhd
 set_global_assignment -name VHDL_FILE BcdTo7Segment.vhd
 set_global_assignment -name VHDL_FILE Multiplicator.vhd
 set_global_assignment -name VHDL_FILE Complementer.vhd
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
