--- a/fpga_calculator.qsf
+++ b/fpga_calculator.qsf
@@ -164,6 +164,8 @@ set_location_assignment PIN_N19 -to o5[5]
 set_location_assignment PIN_N20 -to o5[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to done
 set_location_assignment PIN_A8 -to done
+set_global_assignment -name VHDL_FILE divider.vhd
+set_global_assignment -name VHDL_FILE change2NToN.vhd
 set_global_assignment -name VHDL_FILE BcdTo7Segment3D1S.vhd
 set_global_assignment -name VHDL_FILE SignDetecter.vhd
 set_global_assignment -name VHDL_FILE BcdTo7SegmentDigits.vhd
@@ -183,4 +185,5 @@ set_global_assignment -name VHDL_FILE BcdTo7Segment.vhd
 set_global_assignment -name VHDL_FILE Multiplicator.vhd
 set_global_assignment -name VHDL_FILE Complementer.vhd
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
+set_global_assignment -name VHDL_FILE BcdTo7SegmentForDivider.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
