--- a/fpga_calculator.qsf
+++ b/fpga_calculator.qsf
@@ -188,4 +188,5 @@ set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
 set_global_assignment -name VHDL_FILE BcdTo7SegmentForDivider.vhd
 set_global_assignment -name VHDL_FILE Multiplier.vhd
 set_global_assignment -name VHDL_FILE DividerTo7Segment.vhd
+set_global_assignment -name VHDL_FILE SevenSegmentMode.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
