--- a/fpga_calculator.qsf
+++ b/fpga_calculator.qsf
@@ -164,29 +164,28 @@ set_location_assignment PIN_N19 -to o5[5]
 set_location_assignment PIN_N20 -to o5[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to done
 set_location_assignment PIN_A8 -to done
-set_global_assignment -name VHDL_FILE UtilType.vhd
-set_global_assignment -name VHDL_FILE Divider.vhd
-set_global_assignment -name VHDL_FILE change2NToN.vhd
-set_global_assignment -name VHDL_FILE BcdTo7Segment3D1S.vhd
-set_global_assignment -name VHDL_FILE SignDetecter.vhd
-set_global_assignment -name VHDL_FILE BcdTo7SegmentDigits.vhd
-set_global_assignment -name VHDL_FILE SelectOper.vhd
-set_global_assignment -name VHDL_FILE Calculator.vhd
-set_global_assignment -name VHDL_FILE MainState.vhd
-set_global_assignment -name VHDL_FILE SelectNum.vhd
-set_global_assignment -name VHDL_FILE YAY.vhd
-set_global_assignment -name VHDL_FILE Multiplexer4To1.vhd
+set_global_assignment -name VHDL_FILE AdderSubtractor.vhd
 set_global_assignment -name VHDL_FILE BcdMultiplexer4To1.vhd
-set_global_assignment -name VHDL_FILE OperatorTo7SegmentDigits.vhd
-set_global_assignment -name VHDL_FILE SevenSegmentMultiplexer4To1.vhd
+set_global_assignment -name VHDL_FILE BcdTo7Segment.vhd
+set_global_assignment -name VHDL_FILE BcdTo7Segment3D1S.vhd
+set_global_assignment -name VHDL_FILE BcdTo7SegmentDigits.vhd
+set_global_assignment -name VHDL_FILE BcdTo7SegmentForDivider.vhd
+set_global_assignment -name VHDL_FILE Calculator.vhd
+set_global_assignment -name VHDL_FILE Change2NToN.vhd
+set_global_assignment -name VHDL_FILE Complementer.vhd
+set_global_assignment -name VHDL_FILE Divider.vhd
+set_global_assignment -name VHDL_FILE DividerTo7Segment.vhd
 set_global_assignment -name VHDL_FILE FullAdder.vhd
 set_global_assignment -name VHDL_FILE FullAdderGenerator.vhd
-set_global_assignment -name VHDL_FILE AdderSubtractor.vhd
-set_global_assignment -name VHDL_FILE BcdTo7Segment.vhd
-set_global_assignment -name VHDL_FILE Multiplicator.vhd
-set_global_assignment -name VHDL_FILE Complementer.vhd
-set_global_assignment -name VHDL_FILE BcdTo7SegmentForDivider.vhd
+set_global_assignment -name VHDL_FILE MainState.vhd
 set_global_assignment -name VHDL_FILE Multiplier.vhd
-set_global_assignment -name VHDL_FILE DividerTo7Segment.vhd
+set_global_assignment -name VHDL_FILE Multiplicator.vhd
+set_global_assignment -name VHDL_FILE Multiplexer4To1.vhd
+set_global_assignment -name VHDL_FILE OperatorTo7SegmentDigits.vhd
+set_global_assignment -name VHDL_FILE SelectNum.vhd
+set_global_assignment -name VHDL_FILE SelectOper.vhd
 set_global_assignment -name VHDL_FILE SevenSegmentMode.vhd
+set_global_assignment -name VHDL_FILE SevenSegmentMultiplexer4To1.vhd
+set_global_assignment -name VHDL_FILE SignDetecter.vhd
+set_global_assignment -name VHDL_FILE UtilType.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
